[gd_scene load_steps=5 format=3 uid="uid://2whd3h13vgtp"]

[ext_resource type="Script" path="res://BattleReward.gd" id="1_f4761"]
[ext_resource type="Shader" path="res://shaders/finBatalla.gdshader" id="2_e0r5q"]
[ext_resource type="PackedScene" uid="uid://bej2rjg04i7a8" path="res://scenes/ui/reward_button.tscn" id="4_jm4l3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bgjjr"]
shader = ExtResource("2_e0r5q")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/spiral_color = Color(0.337255, 0, 0, 1)
shader_parameter/frequency = 8.0
shader_parameter/speed = 5.0
shader_parameter/brightness = 3.1
shader_parameter/balance = 0.5
shader_parameter/octaves = 4.0

[node name="BattleReward" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f4761")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bgjjr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rewards"
horizontal_alignment = 1

[node name="RewardContainer" type="PanelContainer" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(110, 80)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/RewardContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Rewards" type="VBoxContainer" parent="VBoxContainer/RewardContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardReward" parent="VBoxContainer/RewardContainer/MarginContainer/Rewards" instance=ExtResource("4_jm4l3")]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Continuar"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
